[gd_scene load_steps=52 format=3 uid="uid://chuam0mgkf1w5"]

[ext_resource type="Script" uid="uid://ci7b0x2xambs8" path="res://scenes/offer_simple.gd" id="1_rmo8c"]
[ext_resource type="Texture2D" uid="uid://dsp2iubqbrmub" path="res://assets/final/paper.png" id="2_pxix6"]
[ext_resource type="PackedScene" uid="uid://euex01opw2ii" path="res://ui/income_stream_view.tscn" id="3_uuxy0"]
[ext_resource type="PackedScene" uid="uid://cxh3bwtvp3el1" path="res://ui/worker_view.tscn" id="4_qydxe"]
[ext_resource type="Texture2D" uid="uid://t16adebrr2qk" path="res://assets/final/binder-button.png" id="5_soyh0"]
[ext_resource type="Texture2D" uid="uid://d4jm3m5g7ioux" path="res://assets/final/binder-button-selected.png" id="6_butqv"]
[ext_resource type="Texture2D" uid="uid://butegaonl7dfb" path="res://assets/final/binder-button-highlighted.png" id="7_kiyua"]
[ext_resource type="Texture2D" uid="uid://dhjtbycxyo2gb" path="res://assets/final/binder-button-selected-export.png" id="8_vw45n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1lnr7"]
atlas = ExtResource("2_pxix6")
region = Rect2(4734, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yxql"]
atlas = ExtResource("2_pxix6")
region = Rect2(0, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8kde"]
atlas = ExtResource("2_pxix6")
region = Rect2(263, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw037"]
atlas = ExtResource("2_pxix6")
region = Rect2(526, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_chm1p"]
atlas = ExtResource("2_pxix6")
region = Rect2(789, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xqa8"]
atlas = ExtResource("2_pxix6")
region = Rect2(1052, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaymw"]
atlas = ExtResource("2_pxix6")
region = Rect2(1315, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqcfb"]
atlas = ExtResource("2_pxix6")
region = Rect2(1578, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwr3g"]
atlas = ExtResource("2_pxix6")
region = Rect2(1841, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_3brq4"]
atlas = ExtResource("2_pxix6")
region = Rect2(2104, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_qokwr"]
atlas = ExtResource("2_pxix6")
region = Rect2(2367, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6ic8"]
atlas = ExtResource("2_pxix6")
region = Rect2(2630, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkafl"]
atlas = ExtResource("2_pxix6")
region = Rect2(2893, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2xhv"]
atlas = ExtResource("2_pxix6")
region = Rect2(3156, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_75bn0"]
atlas = ExtResource("2_pxix6")
region = Rect2(3419, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7hvt"]
atlas = ExtResource("2_pxix6")
region = Rect2(3682, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_di858"]
atlas = ExtResource("2_pxix6")
region = Rect2(3945, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoui8"]
atlas = ExtResource("2_pxix6")
region = Rect2(4208, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vlcw"]
atlas = ExtResource("2_pxix6")
region = Rect2(4471, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_425ht"]
atlas = ExtResource("2_pxix6")
region = Rect2(4734, 1800, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_iauyw"]
atlas = ExtResource("2_pxix6")
region = Rect2(0, 0, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrjig"]
atlas = ExtResource("2_pxix6")
region = Rect2(0, 1350, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg6tx"]
atlas = ExtResource("2_pxix6")
region = Rect2(0, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk82e"]
atlas = ExtResource("2_pxix6")
region = Rect2(263, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeppm"]
atlas = ExtResource("2_pxix6")
region = Rect2(526, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0crc"]
atlas = ExtResource("2_pxix6")
region = Rect2(789, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi3jn"]
atlas = ExtResource("2_pxix6")
region = Rect2(1052, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0b1c"]
atlas = ExtResource("2_pxix6")
region = Rect2(1315, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_xktrq"]
atlas = ExtResource("2_pxix6")
region = Rect2(1578, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjn4g"]
atlas = ExtResource("2_pxix6")
region = Rect2(1841, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0sga"]
atlas = ExtResource("2_pxix6")
region = Rect2(2104, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkiwj"]
atlas = ExtResource("2_pxix6")
region = Rect2(2367, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_33vfp"]
atlas = ExtResource("2_pxix6")
region = Rect2(2630, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_hflle"]
atlas = ExtResource("2_pxix6")
region = Rect2(2893, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mpm2"]
atlas = ExtResource("2_pxix6")
region = Rect2(3156, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvsbr"]
atlas = ExtResource("2_pxix6")
region = Rect2(3419, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2u1n"]
atlas = ExtResource("2_pxix6")
region = Rect2(3682, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne2ls"]
atlas = ExtResource("2_pxix6")
region = Rect2(3945, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejon7"]
atlas = ExtResource("2_pxix6")
region = Rect2(4208, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw5bb"]
atlas = ExtResource("2_pxix6")
region = Rect2(4471, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq8xu"]
atlas = ExtResource("2_pxix6")
region = Rect2(4734, 2250, 263, 450)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn721"]
atlas = ExtResource("2_pxix6")
region = Rect2(0, 0, 263, 450)

[sub_resource type="SpriteFrames" id="SpriteFrames_5d17c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lnr7")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_0yxql")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_x8kde")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kw037")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_chm1p")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_4xqa8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vaymw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_jqcfb")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_pwr3g")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3brq4")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qokwr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_f6ic8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_kkafl")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_s2xhv")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_75bn0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_x7hvt")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_di858")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qoui8")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_3vlcw")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_425ht")
}],
"loop": false,
"name": &"hide",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iauyw")
}],
"loop": false,
"name": &"page",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_vrjig")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xg6tx")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_sk82e")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_eeppm")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_s0crc")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_yi3jn")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_j0b1c")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_xktrq")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vjn4g")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_w0sga")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hkiwj")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_33vfp")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_hflle")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_6mpm2")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_dvsbr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_f2u1n")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ne2ls")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_ejon7")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_tw5bb")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_vq8xu")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_tn721")
}],
"loop": false,
"name": &"show",
"speed": 15.0
}]

[node name="OfferSimple" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 265.0
offset_bottom = 454.0
size_flags_horizontal = 3
script = ExtResource("1_rmo8c")

[node name="Animation" type="AnimatedSprite2D" parent="."]
position = Vector2(132, 226)
sprite_frames = SubResource("SpriteFrames_5d17c")
animation = &"page"
autoplay = "page"

[node name="IncomeStreamView" parent="." instance=ExtResource("3_uuxy0")]
visible = false
position = Vector2(19, 32)

[node name="WorkerView" parent="." instance=ExtResource("4_qydxe")]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 38.0
offset_right = 262.0
offset_bottom = 214.0

[node name="AcceptIncomeStreamButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 204.0
offset_right = 192.0
offset_bottom = 268.0
texture_normal = ExtResource("5_soyh0")
texture_pressed = ExtResource("6_butqv")
texture_hover = ExtResource("7_kiyua")
texture_disabled = ExtResource("8_vw45n")
stretch_mode = 0

[node name="Label" type="Label" parent="AcceptIncomeStreamButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Accept Offer"
horizontal_alignment = 1

[node name="HireWorkerButton" type="TextureButton" parent="."]
visible = false
layout_mode = 0
offset_left = 66.0
offset_top = 205.0
offset_right = 192.0
offset_bottom = 269.0
texture_normal = ExtResource("5_soyh0")
texture_pressed = ExtResource("6_butqv")
texture_hover = ExtResource("7_kiyua")
texture_disabled = ExtResource("8_vw45n")
stretch_mode = 0

[node name="Label" type="Label" parent="HireWorkerButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -11.5
offset_right = 48.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hire"
horizontal_alignment = 1

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="pressed" from="AcceptIncomeStreamButton" to="." method="_on_accept_income_stream_button_pressed"]
[connection signal="pressed" from="HireWorkerButton" to="." method="_on_hire_worker_button_pressed"]
